--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,24 @@ input::placeholder {
     font-size: 24px;
   }
 
+  .header {
+    display: block;
+    position: sticky;
+    inset-block-start: -393px;
+  }
+
+  .header a {
+    margin-block-start: 16px;
+  }
+  .header a {
+    display: block;
+    margin-block-start: 8px;
+  }
+
+  .header a:hover {
+    color: var(--black);
+  }
+
   header {
     position: absolute;
     inset-inline-start: -232px;
